--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -1,6 +1,7 @@
 // navigation sizes
 $headerHeight: 3rem;
-$navWidth: 10rem;
+$navWidthExpanded: 10rem;
+$navWidthCollapsed: 5rem;
 
 // media queries
 $mobileWindowWidth: 43.75rem; // Maximum window width in which desktop browser gets mobile view.
