updating hamburger button

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,9 @@
 // Greyscale
 $appBackground: #F3F5FA;
 $black: #565e5f;
+$gitBackground: #f8f8f8;
+$gitBorder: #dfe2e5;
+$grey: #d7d8d4;
 $navBorder: #E6E8E9;
 $white: #FFF;
 
