updating storybook styling

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,9 +8,9 @@ $navBorder: #E6E8E9;
 $white: #FFF;
 
 // Colors
-$blue: 66A8D5;
-$brown: E19470;
-$green: 7DCC93;
-$navy: 21354B;
-$purple: 31355A;
-$red: F76160;
+$blue: #66A8D5;
+$brown: #E19470;
+$green: #7DCC93;
+$navy: #21354B;
+$purple: #31355A;
+$red: #F76160;
