--- a/src/app/navigation/navigation.module.scss
+++ b/src/app/navigation/navigation.module.scss
@@ -6,6 +6,7 @@
   border-right: 0.0625rem solid $navBorder;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   width: $navWidthCollapsed;
 }
 
