--- a/src/app/shared/buttons/hamburgerButton/hamburgerButton.module.scss
+++ b/src/app/shared/buttons/hamburgerButton/hamburgerButton.module.scss
@@ -1,6 +1,21 @@
+@import "~styles/colors";
+
 .button {
   background: transparent;
   border: none;
   cursor: pointer;
   outline: none;
+  > div {
+    > svg {
+      > g {
+        > g {
+          > g {
+            path {
+              stroke: $black;
+            }
+          }
+        }
+      }
+    }
+  }
 }
