--- a/src/app/shared/buttons/navigationButton/navigationButton.module.scss
+++ b/src/app/shared/buttons/navigationButton/navigationButton.module.scss
@@ -6,6 +6,7 @@
   border: none;
   cursor: pointer;
   display: flex;
+  margin: 0.5rem 0;
   outline: none;
   padding: 0;
   width: $navWidthExpanded;
@@ -13,9 +14,4 @@
 
 .iconDiv {
   width: $navWidthCollapsed;
-}
-
-.p {
-  font-size: 1rem;
-  font-weight: 100;
 }
