--- a/src/app/navigation/navigation.module.scss
+++ b/src/app/navigation/navigation.module.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  //overflow: hidden;
+  overflow: hidden;
   position: relative;
   width: $navWidthCollapsed;
 }
