--- a/src/app/pages/dashboardPage/dashboardPage.module.scss
+++ b/src/app/pages/dashboardPage/dashboardPage.module.scss
@@ -4,3 +4,11 @@
   height: 100%;
   justify-content: center;
 }
+
+.div {
+  background: pink;
+  height: 10rem;
+  position: absolute;
+  top: 0;
+  width: 10rem;
+}
