adding video player

--- a/src/app/navigation/navigation.module.scss
+++ b/src/app/navigation/navigation.module.scss
@@ -19,6 +19,10 @@
   width: $navWidthCollapsed;
 }
 
+.section {
+  position: relative;
+}
+
 :export {
   navWidthCollapsed: $navWidthCollapsed;
   navWidthExpanded: $navWidthExpanded;
