--- a/src/app/shared/buttons/navigationButton/navigationButton.module.scss
+++ b/src/app/shared/buttons/navigationButton/navigationButton.module.scss
@@ -9,15 +9,9 @@
   align-items: center;
   cursor: pointer;
   display: flex;
-  margin: 0.5rem 0;
+  height: $navigationButtonHeight;
+  margin: $navigationButtonMargin 0;
   position: relative;
   text-decoration: none;
   width: $navWidthExpanded;
-}
-
-.span {
-  border-radius: 0 0.5625rem 0.5625rem 0;
-  border: 0.125rem solid $blue;
-  height: 70%;
-  position: absolute;
 }
