--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -1,4 +1,6 @@
 // navigation sizes
 $headerHeight: 3rem;
-$navWidthExpanded: 15rem;
 $navWidthCollapsed: 5rem;
+$navWidthExpanded: 15rem;
+$navigationButtonHeight: 4rem;
+$navigationButtonMargin: 0.5rem;
