--- a/src/app/shared/typography/typography.module.scss
+++ b/src/app/shared/typography/typography.module.scss
@@ -1,30 +1,23 @@
 @import "~styles/colors";
 @import "~styles/fonts";
 
-.boldText {
+.typography {
   color: $black;
   font-family: $poppins;
   font-size: 1rem;
-  font-weight: 600;
 }
 
-.h1 {
-  color: $black;
-  font-family: $poppins;
-  font-size: 4rem;
-  font-weight: 600;
+// ----- weights ----- //
+
+.bold {
+  font-weight: 400;
 }
 
-.h2 {
-  color: $black;
-  font-family: $poppins;
-  font-size: 3rem;
-  font-weight: 600;
-}
-
-.text {
-  color: $black;
-  font-family: $poppins;
-  font-size: 1rem;
+.light {
   font-weight: 100;
 }
+
+.regular {
+  font-weight: 200;
+}
+
