--- a/src/app/shared/typography/typography.module.scss
+++ b/src/app/shared/typography/typography.module.scss
@@ -9,12 +9,16 @@
 
 // ----- sizes ----- //
 
+.medium {
+  font-size: 0.75rem;
+}
+
 .normal {
   font-size: 0.875rem;
 }
 
 .small {
-  font-size: 0.75rem;
+  font-size: 0.625rem;
 }
 
 // ----- weights ----- //
