working on youtube card

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,6 +5,8 @@ $gitBackground: #f8f8f8;
 $gitBorder: #dfe2e5;
 $grey: #d7d8d4;
 $navBorder: #E6E8E9;
+$transparentBlack: #565e5fa6;
+$transparentWhite: #ffffffb8;
 $white: #FFF;
 
 // Colors
