--- a/src/app/shared/typography/typography.module.scss
+++ b/src/app/shared/typography/typography.module.scss
@@ -1,10 +1,34 @@
 @import "~styles/colors";
 @import "~styles/fonts";
 
+// ----- overall styling ----- //
+
 .typography {
-  color: $black;
-  font-family: $poppins;
   margin: 0;
+}
+
+// ----- colors ----- //
+
+.black {
+  color: $black;
+}
+
+.transparentWhite {
+  color: $transparentWhite;
+}
+
+.white {
+  color: $white;
+}
+
+// ----- fonts ----- //
+
+.poppins {
+  font-family: $poppins;
+}
+
+.roboto {
+  font-family: $roboto;
 }
 
 // ----- sizes ----- //
