--- a/src/spa/layout/header/header.module.scss
+++ b/src/spa/layout/header/header.module.scss
@@ -2,6 +2,7 @@
 @import "~styles/sizes";
 
 .header {
-  background: $appBackground;
+  background: $white;
+  border-bottom: 0.0625rem solid $navBorder;
   height: $headerHeight;
 }
