adding play button

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,8 @@ $gitBorder: #dfe2e5;
 $grey: #d7d8d4;
 $navBorder: #E6E8E9;
 $transparentBlack: #565e5fa6;
+$transparentBlackDarker: #565e5fd9;
+$transparentBlackLighter: #798486a6;
 $transparentWhite: #ffffffb8;
 $white: #FFF;
 
