--- a/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.scss
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.scss
@@ -19,3 +19,10 @@
   max-height:100%;
   max-width:100%;
 }
+
+.playButtonDiv {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
