--- a/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.scss
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.scss
@@ -2,10 +2,17 @@
 
 .container {
   background: $white;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.11),
+    0 2px 2px rgba(0,0,0,0.11),
+    0 4px 4px rgba(0,0,0,0.11),
+    0 8px 8px rgba(0,0,0,0.11),
+    0 16px 16px rgba(0,0,0,0.11),
+    0 32px 32px rgba(0,0,0,0.11);
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   height: 16rem;
+  margin: 3rem;
   overflow: hidden;
   width: 15rem;
 }
