updating video card

--- a/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.scss
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.scss
@@ -1,4 +1,5 @@
 @import "~styles/_colors";
+@import "~styles/_sizes";
 
 .container {
   background: $white;
@@ -13,6 +14,7 @@
   flex-direction: column;
   height: 16rem;
   margin: 3rem;
+  min-width: $youtubeCardWidth;
   overflow: hidden;
-  width: 15rem;
+  width: $youtubeCardWidth;
 }
