--- a/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.scss
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.scss
@@ -1,6 +1,9 @@
 @import "~styles/_colors";
+@import "~styles/_sizes";
 
 .container {
+  height: $youtubeCardHeight;
+  width: $youtubeCardWidth;
   display: flex;
   position: relative;
   &:hover {
@@ -21,8 +24,8 @@
 }
 
 .img {
-  max-height:100%;
-  max-width:100%;
+  height:100%;
+  width:100%;
 }
 
 .playButtonDiv {
@@ -32,4 +35,9 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.player {
+  height: 100%;
+  width: 100%;
 }
