--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -4,3 +4,7 @@ $navWidthCollapsed: 5rem;
 $navWidthExpanded: 15rem;
 $navigationButtonHeight: 4rem;
 $navigationButtonMargin: 0.5rem;
+
+// youtube card
+$youtubeCardHeight: 8.4375rem;
+$youtubeCardWidth: 15rem;
