--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -6,5 +6,7 @@ $navigationButtonHeight: 4rem;
 $navigationButtonMargin: 0.5rem;
 
 // youtube card
-$youtubeCardHeight: 8.4375rem;
+$youtubeCardHeight: 16rem;
+$youtubeCardMargin: 1rem;
+$youtubeCardThumbnailHeight: 8.4375rem;
 $youtubeCardWidth: 15rem;
