--- a/src/spa/app/shared/typography/typography.module.scss
+++ b/src/spa/app/shared/typography/typography.module.scss
@@ -13,6 +13,10 @@
   color: $black;
 }
 
+.lightGrey {
+  color: $lightGrey;
+}
+
 .transparentWhite {
   color: $transparentWhite;
 }
@@ -34,7 +38,7 @@
 // ----- sizes ----- //
 
 .large {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .medium {
