--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,6 +3,7 @@ $appBackground: #F3F5FA;
 $black: #565e5f;
 $gitBackground: #f8f8f8;
 $gitBorder: #dfe2e5;
+$lightGrey: #A4AAAF;
 $grey: #d7d8d4;
 $navBorder: #E6E8E9;
 $transparentBlack: #565e5fa6;
