--- a/src/spa/layout/header/header.module.scss
+++ b/src/spa/layout/header/header.module.scss
@@ -1,6 +1,16 @@
 @import "~styles/colors";
 @import "~styles/sizes";
 
+.div {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  margin-left: 1rem;
+  > p {
+    margin: 1rem;
+  }
+}
+
 .header {
   background: $white;
   border-bottom: 0.0625rem solid $navBorder;
