--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -1,6 +1,6 @@
 // navigation sizes
 $headerHeight: 5rem;
-$navWidthCollapsed: 5rem;
+$navWidth: 5rem;
 $navWidthExpanded: 15rem;
 $navigationButtonHeight: 4rem;
 $navigationButtonMargin: 0.5rem;
