--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,7 @@
 // Greyscale
 $appBackground: #F3F5FA;
 $black: #565e5f;
+$darkBlack: #000;
 $gitBackground: #f8f8f8;
 $gitBorder: #dfe2e5;
 $lightGrey: #A4AAAF;
