--- a/src/spa/layout/header/header.module.scss
+++ b/src/spa/layout/header/header.module.scss
@@ -4,5 +4,7 @@
 .header {
   background: $white;
   border-bottom: 0.0625rem solid $navBorder;
+  display: flex;
   height: $headerHeight;
+  justify-content: space-between;
 }
