--- a/src/spa/layout/navigation/navigationLogo/navigationLogo.module.scss
+++ b/src/spa/layout/navigation/navigationLogo/navigationLogo.module.scss
@@ -3,11 +3,11 @@
 
 .hr {
   border-color: $navBorder;
+  border-width: 0 0 0.0625rem 0;
   bottom: 0;
   margin: 0;
   position: absolute;
   width: 80%;
-  border-width: 0 0 1px 0;
 }
 
 .img {
