converting to less

--- a/src/spa/app/shared/buttons/hamburgerButton/hamburgerButton.module.less
+++ b/src/spa/app/shared/buttons/hamburgerButton/hamburgerButton.module.less
@@ -1,4 +1,4 @@
-@import "~styles/colors";
+@import "~styles/_colors";
 
 .button {
   background: transparent;
@@ -12,7 +12,7 @@
         > g {
           > g {
             path {
-              stroke: $black;
+              stroke: @black;
             }
           }
         }
