--- a/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.less
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .container {
-  background: $white;
+  background: @white;
   box-shadow: 0 1px 2px rgba(0,0,0,0.07),
     0 2px 4px rgba(0,0,0,0.07),
     0 4px 8px rgba(0,0,0,0.07),
@@ -12,9 +12,9 @@
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
-  height: $youtubeCardHeight;
-  margin: $youtubeCardMargin;
-  min-width: $youtubeCardWidth;
+  height: @youtubeCardHeight;
+  margin: @youtubeCardMargin;
+  min-width: @youtubeCardWidth;
   overflow: hidden;
-  width: $youtubeCardWidth;
+  width: @youtubeCardWidth;
 }
