--- a/src/spa/app/shared/typography/typography.module.less
+++ b/src/spa/app/shared/typography/typography.module.less
@@ -1,5 +1,5 @@
-@import "~styles/colors";
-@import "~styles/fonts";
+@import "~styles/_colors";
+@import "~styles/_fonts";
 
 // ----- overall styling ----- //
 
@@ -10,29 +10,29 @@
 // ----- colors ----- //
 
 .black {
-  color: $black;
+  color: @black;
 }
 
 .lightGrey {
-  color: $lightGrey;
+  color: @lightGrey;
 }
 
 .transparentWhite {
-  color: $transparentWhite;
+  color: @transparentWhite;
 }
 
 .white {
-  color: $white;
+  color: @white;
 }
 
 // ----- fonts ----- //
 
 .poppins {
-  font-family: $poppins;
+  font-family: @poppins;
 }
 
 .roboto {
-  font-family: $roboto;
+  font-family: @roboto;
 }
 
 // ----- sizes ----- //
