--- a/src/spa/layout/header/headerTools/headerTools.module.less
+++ b/src/spa/layout/header/headerTools/headerTools.module.less
@@ -1,4 +1,4 @@
-@import "~styles/colors";
+@import "~styles/_colors";
 
 .div {
   align-items: center;
@@ -7,13 +7,13 @@
   > svg {
     margin-left: 0.5rem;
     * {
-      fill: $lightGrey;
+      fill: @lightGrey;
     }
   }
 }
 
 .hr {
-  border-color: $navBorder;
+  border-color: @navBorder;
   border-width: 0 0.0625rem 0 0;
   height: 60%;
 }
