--- a/src/spa/layout/layout.module.less
+++ b/src/spa/layout/layout.module.less
@@ -1,8 +1,7 @@
-@import "~styles/colors";
-@import "~styles/sizes";
+@import "~styles/_colors";
 
 .section {
-  background: $appBackground;
+  background: @appBackground;
   flex: auto;
 }
 
