--- a/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCardThumbnail/youtubeCardThumbnail.module.less
@@ -2,8 +2,8 @@
 @import "~styles/_sizes";
 
 .container {
-  height: $youtubeCardThumbnailHeight;
-  width: $youtubeCardWidth;
+  height: @youtubeCardThumbnailHeight;
+  width: @youtubeCardWidth;
   display: flex;
   position: relative;
   &:hover {
@@ -14,7 +14,7 @@
 }
 
 .durationDiv {
-  background: $transparentBlack;
+  background: @transparentBlack;
   border-radius: 1rem;
   bottom: 0;
   margin: 1rem;
@@ -29,9 +29,9 @@
 }
 
 .overlayDiv {
-  height: $youtubeCardThumbnailHeight;
+  height: @youtubeCardThumbnailHeight;
   position: absolute;
-  width: $youtubeCardWidth;
+  width: @youtubeCardWidth;
 }
 
 .playButtonDiv {
