--- a/src/spa/layout/header/headerTitles/headerTitleButton/headerTitleButton.module.less
+++ b/src/spa/layout/header/headerTitles/headerTitleButton/headerTitleButton.module.less
@@ -1,8 +1,8 @@
-@import "~styles/colors";
+@import "~styles/_colors";
 
 .activeLink {
   p {
-    color: $blue !important;
+    color: @blue !important;
     transition: 0.25s color ease;
   }
 }
@@ -12,7 +12,7 @@
   text-decoration: none;
   &:hover {
     p {
-      color: $black;
+      color: @black;
       transition: 0.25s color ease;
     }
   }
