--- a/src/spa/layout/navigation/navigationLogo/navigationLogo.module.less
+++ b/src/spa/layout/navigation/navigationLogo/navigationLogo.module.less
@@ -1,8 +1,8 @@
-@import "~styles/colors";
-@import "~styles/sizes";
+@import "~styles/_colors";
+@import "~styles/_sizes";
 
 .hr {
-  border-color: $navBorder;
+  border-color: @navBorder;
   border-width: 0 0 0.0625rem 0;
   bottom: 0;
   margin: 0;
@@ -17,7 +17,7 @@
 .section {
   align-items: center;
   display: flex;
-  height: $headerHeight;
+  height: @headerHeight;
   justify-content: center;
   position: relative;
 }
