--- a/src/spa/layout/navigation/pageIndicator/pageIndicator.module.less
+++ b/src/spa/layout/navigation/pageIndicator/pageIndicator.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  height: calc(12rem + #{$navigationButtonMargin} * 4);
+  height: calc(12rem + @navigationButtonMargin * 4);
   position: relative;
   width: 20rem;
 }
@@ -13,7 +13,7 @@
 
 .span {
   border-radius: 0 0.5625rem 0.5625rem 0;
-  border: 0.125rem solid $blue;
-  height: $navigationButtonHeight;
+  border: 0.125rem solid @blue;
+  height: @navigationButtonHeight;
   position: absolute;
 }
