updating login form

--- a/src/spa/app/pages/landingPage/loginForm/loginForm.module.less
+++ b/src/spa/app/pages/landingPage/loginForm/loginForm.module.less
@@ -1,4 +1,14 @@
-.div {
+.buttonDiv {
+  display: flex;
+}
+
+.form {
+  background: pink;
+  width: 20rem;
+  height: 30rem;
+}
+
+.formContainer {
   position: absolute;
   left: 5rem;
   top: 5rem;
@@ -7,8 +17,7 @@
   height: 40rem;
 }
 
-.form {
-  background: pink;
-  width: 20rem;
-  height: 30rem;
+.loginDiv {
+  display: flex;
+  justify-content: space-between;
 }
