updating login form

--- a/src/spa/app/pages/landingPage/loginForm/loginForm.module.less
+++ b/src/spa/app/pages/landingPage/loginForm/loginForm.module.less
@@ -1,5 +1,10 @@
+@import '~styles/_ant';
+
 .buttonDiv {
   display: flex;
+  button:first-child {
+    margin-right: 2rem;
+  }
 }
 
 .form {
@@ -17,7 +22,18 @@
   height: 40rem;
 }
 
+.img {
+  height: 2.25rem;
+  margin-right: 0.625rem;
+  width: 2.25rem;
+}
+
 .loginDiv {
   display: flex;
   justify-content: space-between;
+}
+
+.logoDiv {
+  display: flex;
+  align-items: center;
 }
