--- a/src/spa/app/shared/inputs/textInput/textInput.less
+++ b/src/spa/app/shared/inputs/textInput/textInput.less
@@ -1,29 +1,33 @@
 @import '~antd/lib/input/style/index.less';
 @import '~antd/lib/form/style/index.less';
-//@import '~styles/_borders';
+@import '~styles/_ant';
 @import '~styles/_colors';
 @import '~styles/_fonts';
 
-//@border-color-base: @input-border-color;
-//@border-radius-base: @input-border-radius;
-//@border-style-base: @input-border-style;
-//@border-width-base: @input-border-width;
 @error-color: @red;
 @input-color: @black;
-//@input-hover-border-color: @input-border-color;
-@input-padding-horizontal-base: 0.75rem;
-//@input-placeholder-color: @darkGrey;
+@input-hover-border-color: @input-border-color;
 
-.ant-input:focus {
-  border-color: @blue;
-  //box-shadow: @input-box-shadow;
+.ant-input {
+  font-family: @poppins;
+  &:focus {
+    border-color: @blue;
+  }
 }
 
 .has-error .ant-input:focus {
   border-color: @red;
-  //box-shadow: @input-box-shadow-error;
 }
 
 .ant-form-explain {
-  //font-size: @font-size-small;
+  font-family: @poppins;
+}
+
+.ant-input-affix-wrapper:hover .ant-input:not(.ant-input-disabled) {
+  border-color: @input-border-color;
+  &.ant-input {
+    &:focus {
+      border-color: @blue;
+    }
+  }
 }
