--- a/src/styles/_ant.less
+++ b/src/styles/_ant.less
@@ -1,4 +1,5 @@
 @import "~styles/_colors";
+@import "~styles/_sizes";
 
 @primary-color: @blue;
-@form-item-margin-bottom: 0.5rem;
+@form-item-margin-bottom: @formItemMarginBottom;
