--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -1,7 +1,7 @@
 // Greyscale
 @appBackground: #F3F5FA;
 @black: #565e5f;
-@darkBlack: #000;
+@darkBlack: #161925;
 @gitBackground: #f8f8f8;
 @gitBorder: #dfe2e5;
 @lightGrey: #A4AAAF;
@@ -14,10 +14,13 @@
 @white: #FFF;
 
 // Colors
-@blue: #66A8D5;
-@darkBlue: #557faa;
+@blue: #00A6ED;
+@darkBlue: #0096db;
+@darkerBlue: #0081c3;
 @brown: #E19470;
 @green: #7DCC93;
 @navy: #21354B;
+@orange: #F17D00;
 @purple: #31355A;
-@red: #F76160;
+@red: #E41245;
+@yellow: #FCC900;
