--- a/src/spa/app/shared/buttons/button/button.module.less
+++ b/src/spa/app/shared/buttons/button/button.module.less
@@ -1,6 +1,14 @@
 @import "~styles/_colors";
 @import "~styles/_fonts";
 
+.button {
+  align-items: center;
+  display: flex;
+  > svg {
+    margin-right: 0.5rem;
+  }
+}
+
 .primary {
   &:hover {
     background: @darkBlue;
@@ -13,7 +21,7 @@
   color: @blue;
   font-family: @poppins;
   &:hover {
-    border-color: @darkBlue;
-    color: @darkBlue;
+    border-color: @darkerBlue;
+    color: @darkerBlue;
   }
 }
