--- a/src/spa/app/pages/landingPage/landingPage.module.less
+++ b/src/spa/app/pages/landingPage/landingPage.module.less
@@ -1,3 +1,18 @@
+.img {
+  height: 100%;
+}
+
 .main {
   background: pink;
+}
+
+.removeMe {
+  position: absolute;
+  background: lightblue;
+  bottom: 2rem;
+  left: 4rem;
+  padding: 1rem;
+  > button {
+    padding: 1rem;
+  }
 }
