--- a/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.less
+++ b/src/spa/app/shared/cards/youtubeCard/youtubeCard.module.less
@@ -1,14 +1,10 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
+@import "~styles/_shadows";
 
 .container {
   background: @white;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.07),
-    0 2px 4px rgba(0,0,0,0.07),
-    0 4px 8px rgba(0,0,0,0.07),
-    0 8px 16px rgba(0,0,0,0.07),
-    0 16px 32px rgba(0,0,0,0.07),
-    0 32px 64px rgba(0,0,0,0.07);
+  box-shadow: @cardBoxShadow;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
