--- a/src/spa/app/shared/inputs/anchor/anchor.module.less
+++ b/src/spa/app/shared/inputs/anchor/anchor.module.less
@@ -1,3 +1,11 @@
 .a {
   text-decoration: none;
 }
+
+.button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+}
