--- a/src/spa/app/shared/buttons/button/button.module.less
+++ b/src/spa/app/shared/buttons/button/button.module.less
@@ -10,9 +10,10 @@
 }
 
 .primary {
+  background: @blue !important;
   &:hover {
-    background: @darkBlue;
-    border-color: @darkBlue;
+    background: @darkBlue !important;
+    border-color: @darkBlue !important;
   }
 }
 
@@ -21,7 +22,7 @@
   color: @blue;
   font-family: @poppins;
   &:hover {
-    border-color: @darkerBlue;
-    color: @darkerBlue;
+    border-color: @darkerBlue !important;
+    color: @darkerBlue !important;
   }
 }
