--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -1,6 +1,8 @@
+// ----- ant ----- //
 // ant form sizes
 @formItemMarginBottom: 0.75rem;
 
+// ----- navigation ----- //
 // navigation sizes
 @headerHeight: 5rem;
 @navWidth: 5rem;
@@ -8,8 +10,13 @@
 @navigationButtonHeight: 4rem;
 @navigationButtonMargin: 0.5rem;
 
+// ----- cards ----- //
 // youtube card
 @youtubeCardHeight: 16rem;
 @youtubeCardMargin: 1rem;
 @youtubeCardThumbnailHeight: 8.4375rem;
 @youtubeCardWidth: 15rem;
+
+// ----- forms ----- //
+// login form
+@formHorizontalPadding: 1.5rem;
