--- a/src/spa/app/pages/landingPage/landingPage.module.less
+++ b/src/spa/app/pages/landingPage/landingPage.module.less
@@ -1,18 +1,16 @@
+@backgroundImageWidth: 1364px;
+
 .img {
-  height: 100%;
-}
-
-.main {
-  background: pink;
-}
-
-.removeMe {
-  position: absolute;
-  background: lightblue;
-  bottom: 2rem;
-  left: 4rem;
-  padding: 1rem;
-  > button {
-    padding: 1rem;
+  // https://css-tricks.com/perfect-full-page-background-image/
+  height: auto;
+  left: 0;
+  min-height: 100%;
+  min-width: @backgroundImageWidth;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  @media screen and (max-width: @backgroundImageWidth) {
+    left: 50%;
+    margin-left: calc((@backgroundImageWidth / 2) * -1);
   }
 }
