--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -1,11 +1,11 @@
-//@cardBoxShadow: 0 1px 2px rgba(0,0,0,0.07),
-//  0 2px 4px rgba(0,0,0,0.07),
-//  0 4px 8px rgba(0,0,0,0.07),
-//  0 8px 16px rgba(0,0,0,0.07),
-//  0 16px 32px rgba(0,0,0,0.07),
-//  0 32px 64px rgba(0,0,0,0.07);
+@cardBoxShadow: 0 1px 2px rgba(0,0,0,0.07),
+  0 2px 4px rgba(0,0,0,0.07),
+  0 4px 8px rgba(0,0,0,0.07),
+  0 8px 16px rgba(0,0,0,0.07),
+  0 16px 32px rgba(0,0,0,0.07),
+  0 32px 64px rgba(0,0,0,0.07);
 
-@cardBoxShadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+@loginFormBoxShadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
 0 6.7px 5.3px rgba(0, 0, 0, 0.048),
 0 12.5px 10px rgba(0, 0, 0, 0.06),
 0 22.3px 17.9px rgba(0, 0, 0, 0.072),
