updating login form

--- a/src/styles/_ant.less
+++ b/src/styles/_ant.less
@@ -1,5 +1,8 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
 
+// colors
 @primary-color: @blue;
+
+// forms
 @form-item-margin-bottom: @formItemMarginBottom;
