--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -24,3 +24,11 @@
 @purple: #31355A;
 @red: #E41245;
 @yellow: #FCC900;
+@yellowHalf: rgba(252, 201, 0, 0.5);
+
+:export {
+  black: @black;
+  orange: @orange;
+  red: @red;
+  white: @white;
+}
