working on login form

--- a/src/spa/app/shared/alert/alert.module.less
+++ b/src/spa/app/shared/alert/alert.module.less
@@ -1,6 +1,10 @@
 @import "~styles/_colors";
 @import "~styles/_fonts";
 
+.div {
+  overflow: hidden;
+}
+
 .alert {
   align-items: center;
   background-color: @yellowHalf;
