updating login buttons

--- a/src/spa/shared/forms/loginForm/loginFormButtons/loginFormButtons.module.less
+++ b/src/spa/shared/forms/loginForm/loginFormButtons/loginFormButtons.module.less
@@ -7,6 +7,19 @@
   }
 }
 
+.forgotButtonDiv {
+  flex-direction: column;
+  :global {
+    .ant-form-item {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.forgotDiv {
+  height: 0.5rem;
+}
+
 .loginDiv {
   justify-content: space-between;
 }
