--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -26,9 +26,11 @@
 @yellow: #FCC900;
 @yellowHalf: rgba(252, 201, 0, 0.5);
 
+/* stylelint-disable */
 :export {
   black: @black;
   orange: @orange;
   red: @red;
   white: @white;
 }
+/* stylelint-enable */
