adding form wrapper

--- a/src/spa/shared/forms/loginForm/loginForm.module.less
+++ b/src/spa/shared/forms/loginForm/loginForm.module.less
@@ -3,12 +3,7 @@
 @import '~styles/_sizes';
 @import '~styles/_shadows';
 
-.form {
-  padding: 1.25rem @formHorizontalPadding;
-  width: 20rem;
-}
-
-.formContainer {
+.loginForm {
   background: @white;
   border-radius: 0.25rem;
   box-shadow: @loginFormBoxShadow;
