--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -75,3 +75,18 @@
   font-weight: 300;
 }
 
+// ----- button ----- //
+
+.button {
+  background: transparent;
+  border: none;
+  color: @blue;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  text-decoration: none;
+  &:hover {
+    color: @blueHover;
+  }
+}
+
