--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -21,6 +21,14 @@
   color: @lightGrey;
 }
 
+.orange {
+  color: @orange;
+}
+
+.red {
+  color: @red;
+}
+
 .transparentWhite {
   color: @transparentWhite;
 }
