--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -30,8 +30,11 @@
 /* stylelint-disable */
 :export {
   black: @black;
+  blue: @blue;
+  lightGrey: @lightGrey;
   orange: @orange;
   red: @red;
+  transparentWhite: @transparentWhite;
   white: @white;
 }
 /* stylelint-enable */
