updating header profile

--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -21,11 +21,10 @@
 
 .popover {
   top: @headerHeight !important;
-  transform: translateX(645%) !important;
-  left: 0 !important;
+  left: 77% !important;
   :global {
     .ant-popover-content {
-      width: 10rem;
+      width: 17rem;
     }
   }
 }
