--- a/src/spa/shared/modals/popover/popover.less
+++ b/src/spa/shared/modals/popover/popover.less
@@ -1,1 +1,12 @@
 @import "~antd/lib/popover/style/index.less";
+@import "~styles/_colors";
+@import "~styles/_fonts";
+
+.ant-popover-title {
+  align-items: center;
+  color: @black;
+  display: flex;
+  font-family: @poppins;
+  font-size: 1.125rem;
+  font-weight: 300;
+}
