--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -49,24 +49,28 @@
 
 // ----- SIZES ----- //
 
-.large {
+.one {
+  font-size: 0.625rem;
+}
+
+.two {
+  font-size: 0.75rem;
+}
+
+.three {
+  font-size: 1rem;
+}
+
+.four {
   font-size: 1.25rem;
 }
 
-.medium {
-  font-size: 0.75rem;
+.five {
+  font-size: 2.25rem;
 }
 
 .normal {
   font-size: 0.875rem;
-}
-
-.small {
-  font-size: 0.625rem;
-}
-
-.xl {
-  font-size: 2.25rem;
 }
 
 // ----- WEIGHTS ----- //
