updating profile popover

--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -21,10 +21,10 @@
 
 .popover {
   top: @headerHeight !important;
-  left: 77% !important;
+  //left: calc(77% + 4rem) !important;
   :global {
     .ant-popover-content {
-      width: 17rem;
+      width: 13rem;
     }
   }
 }
