updating header profile

--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -5,7 +5,7 @@
   align-items: center;
   cursor: pointer;
   display: flex;
-  margin: 0 2rem 0 1rem;
+  margin-left: 1rem;
   > svg {
     margin-left: 0.5rem;
     * {
