--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -21,10 +21,18 @@
 
 .popover {
   top: @headerHeight !important;
-  //left: calc(77% + 4rem) !important;
   :global {
     .ant-popover-content {
       width: 13rem;
     }
+  }
+}
+
+.ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li:not(:last-of-type) {
+    margin-bottom: 0.625rem;
   }
 }
