working on header notifications

--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -33,6 +33,14 @@
   margin: 0;
   padding: 0;
   li:not(:last-of-type) {
+    svg {
+      margin-left: 0.1875rem;
+    }
     margin-bottom: 0.625rem;
+  }
+  li:last-of-type {
+    svg {
+      margin-right: 0.4375rem;
+    }
   }
 }
