woring on login transition

--- a/src/spa/spa.module.less
+++ b/src/spa/spa.module.less
@@ -1,15 +1,4 @@
-/* stylelint-disable */
-
-.divOne {
-  background: pink;
-  height: 10rem;
-  margin: 2rem;
-  width: 10rem;
-}
-
-.divTwo {
-  background: orange;
-  height: 10rem;
-  margin: 2rem;
-  width: 10rem;
+.spaDiv {
+  display: flex;
+  width: 100%;
 }
