--- a/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
+++ b/src/spa/app/layout/header/headerTools/headerProfile/headerProfile.module.less
@@ -1,11 +1,7 @@
 @import "~styles/_colors";
 @import "~styles/_sizes";
 
-.div {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  margin-left: 1rem;
+.arrowDiv {
   > svg {
     margin-left: 0.5rem;
     * {
@@ -14,9 +10,11 @@
   }
 }
 
-.img {
-  border-radius: 50%;
-  width: 2.25rem;
+.div {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  margin-left: 1rem;
 }
 
 .popover {
