updating dashboard page margin

--- a/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardHeader/dashboardHeaderFilterForm/dashboardHeaderFilterForm.module.less
@@ -1,7 +1,9 @@
+@import "~styles/_sizes";
+
 .div {
   display: flex;
   align-items: center;
-  margin: 1rem 0 0 3rem;
+  margin: 1rem 0 0 calc(@youtubeCardMargin + @dashboardPagePaddingLeft);
   button {
     margin-left: 1.5rem;
   }
