--- a/src/spa/app/pages/dashboardPage/dashboardCards/dashboardCards.module.less
+++ b/src/spa/app/pages/dashboardPage/dashboardCards/dashboardCards.module.less
@@ -1,8 +1,11 @@
+@import "~styles/_sizes";
+
 .section {
   display: flex;
   flex-wrap: wrap;
   flex: auto;
   height: 10rem;
-  justify-content: center;
+  justify-content: space-between;
   overflow: auto;
+  padding-left: @dashboardPagePaddingLeft;
 }
