adding layout animation

--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -27,3 +27,9 @@
 // ----- pages ----- //
 
 @dashboardPagePaddingLeft: 1rem;
+
+/* stylelint-disable */
+:export {
+  headerHeight: @headerHeight;
+}
+/* stylelint-enable */
