--- a/src/spa/app/layout/header/headerTitles/headerTitles.module.less
+++ b/src/spa/app/layout/header/headerTitles/headerTitles.module.less
@@ -1,7 +1,9 @@
+@import "~styles/_sizes";
+
 .div {
   align-items: center;
   display: flex;
-  height: 100%;
+  height: @headerHeight;
   margin-left: 1rem;
   > p {
     margin: 1rem;
