--- a/src/spa/app/layout/header/headerTools/headerTools.module.less
+++ b/src/spa/app/layout/header/headerTools/headerTools.module.less
@@ -1,4 +1,5 @@
 @import "~styles/_colors";
+@import "~styles/_sizes";
 
 .div {
   width: 1rem;
@@ -13,6 +14,7 @@
 .section {
   align-items: center;
   display: flex;
+  height: @headerHeight;
   > svg {
     margin: 1rem;
   }
