--- a/src/spa/shared/fallbacks/spaFallback/spaFallback.module.less
+++ b/src/spa/shared/fallbacks/spaFallback/spaFallback.module.less
@@ -1,6 +1,16 @@
 @import "~styles/_colors";
+@import '~styles/_shadows';
 
 .div {
+  background: @white;
+  border-radius: 2rem;
+  box-shadow: @spaFallbackShadow;
+  height: 15rem;
+  width: 15rem;
+}
+
+.main {
+  align-items: center;
   background: @appBackground;
   display: flex;
   justify-content: center;
