Double spinner fix (#7)
* adding layout animation

* adding transition for layout

* updating page fallback

* working on spa fallback

* working on spa fallback

* updating spa fallback and lottie

* updating shadows styles

* updating init wrapper

* updating dashboard page

* updating variants

* updating routing spinner

--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -27,3 +27,10 @@
 // ----- pages ----- //
 
 @dashboardPagePaddingLeft: 1rem;
+
+/* stylelint-disable */
+:export {
+  headerHeight: @headerHeight;
+  navWidth: @navWidth;
+}
+/* stylelint-enable */
