--- a/src/spa/spa/spa.module.less
+++ b/src/spa/spa/spa.module.less
@@ -14,4 +14,13 @@
 .fallbackDiv {
   display: flex;
   width: 100%;
+  position: absolute;
+  height: 100%;
+}
+
+.fallbackMain {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
