adding spa animation

--- a/src/spa/spa/spa.module.less
+++ b/src/spa/spa/spa.module.less
@@ -1,10 +1,4 @@
-.spaDiv {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-
-.spaDivChild {
+.div {
   display: flex;
   height: 100%;
   position: relative;
