adding about page

--- a/src/spa/shared/forms/loginForm/loginForm.module.less
+++ b/src/spa/shared/forms/loginForm/loginForm.module.less
@@ -1,13 +1,7 @@
-@import '~styles/_colors';
-@import '~styles/_hr';
-@import '~styles/_sizes';
-@import '~styles/_shadows';
+@import '~styles/_boxes';
 
 .loginForm {
-  background: @white;
-  border-radius: 0.25rem;
-  box-shadow: @loginFormBoxShadow;
+  .landingBox;
   left: 5rem;
-  position: absolute;
   top: 5rem;
 }
