Landing error boundary (#21)
* updating landing routing

* udpating routing

* adding about page

* updating error page

* updating about page

* updating login page

* updating prtodo

--- a/src/styles/_boxes.less
+++ b/src/styles/_boxes.less
@@ -1,13 +1,10 @@
 @import '~styles/_colors';
-@import '~styles/_hr';
-@import '~styles/_sizes';
 @import '~styles/_shadows';
 
-.loginForm {
+// Box that appears in our landing page, of various sizes
+.landingBox {
   background: @white;
   border-radius: 0.25rem;
-  box-shadow: @loginFormBoxShadow;
-  left: 5rem;
+  box-shadow: @landingFormBoxShadow;
   position: absolute;
-  top: 5rem;
 }
