--- a/src/spa/shared/cards/card.module.less
+++ b/src/spa/shared/cards/card.module.less
@@ -12,5 +12,14 @@
   margin: @youtubeCardMargin;
   min-width: @youtubeCardWidth;
   overflow: hidden;
+  position: relative;
   width: @youtubeCardWidth;
+}
+
+.overlayDiv {
+  background: #E41245;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
