--- a/src/spa/shared/cards/card.module.less
+++ b/src/spa/shared/cards/card.module.less
@@ -17,9 +17,17 @@
 }
 
 .overlayDiv {
-  background: #E41245;
+  cursor: pointer;
   height: 100%;
   position: absolute;
   width: 100%;
   z-index: 1;
+}
+
+.isSelected {
+  background: @orangeHalfOpacity;
+}
+
+.isNotSelected {
+  background: @orangeQuarterOpacity;
 }
