--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -27,6 +27,10 @@
 @yellow: #FCC900;
 @yellowHalf: rgba(252, 201, 0, 0.5);
 
+// Transparent Colors
+@orangeQuarterOpacity: #F17D0040;
+@orangeHalfOpacity: #F17D0080;
+
 /* stylelint-disable */
 :export {
   black: @black;
