--- a/src/spa/shared/cards/card.module.less
+++ b/src/spa/shared/cards/card.module.less
@@ -24,10 +24,8 @@
   z-index: 1;
 }
 
-.isSelected {
-  background: @orangeHalfOpacity;
-}
+/* stylelint-disable */
 
-.isNotSelected {
-  background: @orangeQuarterOpacity;
+.isSelected {
+  border: 1px solid red;
 }
